--- a/DoAnCNPMNC/lalamove_app/pubspec.yaml
+++ b/DoAnCNPMNC/lalamove_app/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   qr_flutter: ^4.1.0
   pdf: ^3.10.7
   printing: ^5.11.1
-  # Firebase - Tạm thời comment để chạy web, uncomment khi chạy mobile
+  # Firebase - Tam thoi comment lai de chay web test cho nhanh. khi nao chay app thi uncomment :((()))
   # firebase_core: ^2.24.2
   # firebase_messaging: ^14.7.9
   # flutter_local_notifications: ^16.3.0
