Story #21 & #24: Driver Assignment + Reporting with Charts
- Story #21: Fixed driver assignment endpoint and UI
  * Updated driverAssignmentController to use users table
  * Fixed API endpoints (available drivers, assign driver)
  * Created 10 test drivers
  * Fixed JSON parsing and type conversion issues
  * Disabled notification insert (schema mismatch)

- Story #24: Complete reporting system with real database data
  * Revenue report: by day/month/year and vehicle type
  * Delivery statistics: by status and time period
  * Driver performance: top 10 drivers by earnings
  * Customer analytics: total, new, repeat customers
  * Dashboard summary: real-time metrics
  * Added fl_chart package for data visualization
  * Created story_24_reporting_new.dart with Pie & Bar charts
  * Fixed SQL queries for PostgreSQL compatibility

--- a/DoAnCNPMNC/lalamove_app/pubspec.yaml
+++ b/DoAnCNPMNC/lalamove_app/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   qr_flutter: ^4.1.0
   pdf: ^3.10.7
   printing: ^5.11.1
+  fl_chart: ^0.69.0
   # Firebase - Tam thoi comment lai de chay web test cho nhanh. khi nao chay app thi uncomment :((()))
   # firebase_core: ^2.24.2
   # firebase_messaging: ^14.7.9
