--- a/DoAnCNPMNC/backend/.env
+++ b/DoAnCNPMNC/backend/.env
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=food_delivery_db
 DB_USER=postgres
-DB_PASSWORD="Trongkhang205@"
+DB_PASSWORD=1234567890kha
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
