--- a/DoAnCNPMNC/backend/config.env.example
+++ b/DoAnCNPMNC/backend/config.env.example
@@ -19,4 +19,6 @@ CORS_ORIGIN=
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+# Set DISABLE_RATE_LIMIT=true to completely disable rate limiting in development (for testing multiple clients)
+DISABLE_RATE_LIMIT=false
 
