--- a/DoAnCNPMNC/app_giaohang/pubspec.yaml
+++ b/DoAnCNPMNC/app_giaohang/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.3.2
   google_maps_flutter: ^2.7.0
   intl: ^0.19.0
+  geolocator: ^13.0.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
