--- a/DoAnCNPMNC/app_giaohang/pubspec.yaml
+++ b/DoAnCNPMNC/app_giaohang/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   intl: ^0.19.0
   geolocator: ^13.0.1
   permission_handler: ^11.3.1
+  socket_io_client: ^2.0.3+1
+  # Local notifications (for WebSocket notifications)
+  flutter_local_notifications: ^16.3.0
 
 dev_dependencies:
   flutter_test:
