--- a/DoAnCNPMNC/backend/config.env
+++ b/DoAnCNPMNC/backend/config.env
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=food_delivery_db
 DB_USER=postgres
-DB_PASSWORD="Trongkhang205@"
+DB_PASSWORD="11072005"
 
 # JWT Configuration
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -19,3 +19,22 @@ CORS_ORIGIN=
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Email Configuration (for US-27: Notification system)
+# ====================================================
+# Để bật tính năng gửi email, bỏ comment (#) và điền thông tin bên dưới
+# 
+# Gmail: Cần tạo App Password tại https://myaccount.google.com/apppasswords
+# (Bật 2-Step Verification trước, sau đó tạo App Password)
+#
+# Bỏ comment và điền thông tin thật của bạn:
+
+# SMTP_HOST=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=your-email@gmail.com
+# SMTP_PASS=your-app-password-16-chars
+# EMAIL_FROM=noreply@lalamove.com
+
+# Lưu ý: Nếu không cấu hình, hệ thống vẫn chạy nhưng không gửi email
+# Push notifications vẫn hoạt động bình thường
