--- a/DoAnCNPMNC/lalamove_app/pubspec.yaml
+++ b/DoAnCNPMNC/lalamove_app/pubspec.yaml
@@ -30,10 +30,8 @@ dependencies:
   pdf: ^3.10.7
   printing: ^5.11.1
   fl_chart: ^0.69.0
-  # Firebase - Tam thoi comment lai de chay web test cho nhanh. khi nao chay app thi uncomment :((()))
-  # firebase_core: ^2.24.2
-  # firebase_messaging: ^14.7.9
-  # flutter_local_notifications: ^16.3.0
+  # Local notifications (for WebSocket notifications)
+  flutter_local_notifications: ^16.3.0
 
 dev_dependencies:
   flutter_test:
